--- a/web/src/main/resources/templates/post_detail.html
+++ b/web/src/main/resources/templates/post_detail.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Post Detail</title>
 </head>
 <body>
-
+<h1 th:text="${post.title}"></h1>
+<img th:src="${post.imageUrl}" alt="Post Image">
+<p th:each="content : ${#strings.split(post.content, '\n')}" th:text="${content}"></p>
+<p th:each="tag : ${post.tags}" th:text="${tag.name}"></p>
+<a th:href="@{/posts/{id}/edit(id=${post.id})}">Edit</a>
+<a th:href="@{/posts/{id}/delete(id=${post.id})}">Delete</a>
+<form action="/posts/{id}/like" method="post">
+    <button type="submit">Like</button>
+</form>
+<h2>Comments</h2>
+<ul>
+    <li th:each="comment : ${post.comments}">
+        <p th:text="${comment.content}"></p>
+        <a th:href="@{/comments/{id}/edit(id=${comment.id})}">Edit</a>
+        <a th:href="@{/comments/{id}/delete(id=${comment.id})}">Delete</a>
+    </li>
+</ul>
+<form action="/posts/{id}/comment" method="post">
+    <textarea name="content" required></textarea>
+    <button type="submit">Add Comment</button>
+</form>
 </body>
 </html>
