basebook-11 post details view

--- a/web/src/main/resources/templates/post_detail.html
+++ b/web/src/main/resources/templates/post_detail.html
@@ -16,7 +16,7 @@
 <h1 th:text="${post.title}"></h1>
 <img th:src="${post.imageUrl}" alt="Post Image">
 <div>
-    <p th:each="paragraph : ${#strings.split(post.content, '\n')}" th:text="${paragraph}"></p>
+    <p th:each="paragraph : ${post.content}" th:text="${paragraph}"></p>
 </div>
 <div class="tags">
     <span th:each="tag : ${post.tags}" th:text="${tag.name}"></span>
