--- a/web/src/main/resources/templates/post_detail.html
+++ b/web/src/main/resources/templates/post_detail.html
@@ -25,9 +25,9 @@
 </head>
 <body>
 <h1 th:text="${post.title}"></h1>
-<img th:src="${post.imageUrl}" alt="Post Image">
-<div>
-    <p th:each="paragraph : ${post.content}" th:text="${paragraph}"></p>
+<img th:src="${post.imageUrl}"  alt="Post Image">
+<div class="post-content">
+    <p class="post-paragraph" th:each="paragraph : ${post.content}" th:text="${paragraph}"></p>
 </div>
 <div class="tags">
     <span th:each="tag : ${post.tags}" th:text="${tag.name}"></span>
@@ -63,6 +63,8 @@
     <button type="submit">Like</button> (<span th:text="${post.likesCount}"></span>)
 </form>
 
+<img src="/static/like.png" loading="lazy" alt="Like:" width="30" height="30"/>
+
 <!-- Comments -->
 <h2>Comments</h2>
 <ul>
@@ -85,7 +87,7 @@
         </form>
     </li>
 </ul>
-
+<img th:src="@{/uploads/images/comment.png}" alt="Uploaded Image">
 <!-- Add Comment -->
 <form th:action="@{/comments/{postId}(postId=${post.id})}" method="post">
     <textarea name="content" rows="3" required></textarea>
