--- a/web/src/main/resources/templates/post_list.html
+++ b/web/src/main/resources/templates/post_list.html
@@ -71,6 +71,9 @@
         </h2>
         <img th:src="${post.imageUrl}" alt="Post Image" class="img-fluid">
         <p th:utext="${#strings.abbreviate(post.content, 150)}"></p>
+        Date:
+        <p th:if="${post.createdAt != null}" th:text="${#temporals.format(post.createdAt, 'dd.MM.yyyy HH:mm')}"></p>
+        <p th:unless="${post.createdAt != null}">Дата не указана</p>
 
         <div class="d-flex justify-content-between">
             <div class="d-flex align-items-center">
@@ -85,7 +88,7 @@
         </div>
 
         <div class="tags mt-3">
-            <span th:each="tag : ${post.tags}" th:text="${tag.name}" class="badge bg-secondary"></span>
+            <span th:text="${post.tagNames}" class="badge bg-secondary"></span>
         </div>
     </div>
 
