--- a/web/src/main/resources/templates/post_list.html
+++ b/web/src/main/resources/templates/post_list.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>Post List</title>
-    <link rel="stylesheet" th:href="@{/static/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{/static/css/styles.css}">
+    <link rel="stylesheet" th:href="@{/static/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/static/css/styles.css}"/>
     <script src="/static/scripts.js"></script>
     <script src="/static/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -21,17 +21,17 @@
         <form th:action="@{/posts}" th:object="${post}" method="POST" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="title" class="form-label">Title:</label>
-                <input type="text" id="title" name="title" class="form-control" required/>
+                <input type="text" id="title" name="title" class="form-control" required="required"/>
             </div>
 
             <div class="mb-3">
                 <label for="content" class="form-label">Content:</label>
-                <textarea id="content" name="content" class="form-control" required></textarea>
+                <textarea id="content" name="content" class="form-control" required="required"></textarea>
             </div>
 
             <div class="mb-3">
                 <label for="tags" class="form-label">Tags:</label>
-                <select name="tags" id="tags" class="form-select" multiple>
+                <select name="tags" id="tags" class="form-select" multiple="multiple">
                     <option th:each="tag : ${tags}" th:value="${tag.id}" th:text="${tag.name}"></option>
                 </select>
             </div>
@@ -69,7 +69,7 @@
         <h2>
             <a th:href="@{/posts/{id}(id=${post.id})}" th:text="${post.title}" class="text-decoration-none text-dark"></a>
         </h2>
-        <img th:src="${post.imageUrl}" alt="Post Image" class="img-fluid">
+        <img th:src="${post.imageUrl}" alt="Post Image" class="img-fluid"/>
         <p th:utext="${#strings.abbreviate(post.content, 150)}"></p>
         Date:
         <p th:if="${post.createdAt != null}" th:text="${#temporals.format(post.createdAt, 'dd.MM.yyyy HH:mm')}"></p>
